2000-06-22  Christopher St. John <cstjohn@acm.org>

	* vrml97parser.g There was a case missed in
	protoScriptFieldInterfaceDeclaration where a field followed by an
	IS wasn't having addField() called on it.

	* vrml97parser.g, vrml97scanner.cpp, vrml97scanner.h Moved
	identification of Script nodes from the scanner into the
	parser. It was very difficult to identify all the cases where a
	SCRIPT-token (rather than a normal ID token) should be returned
	when the string "Script" was encountered, and the missing cases
	were causing parse problems.

	* VrmlScene.cpp reordered initializations in ctr to silence
	compiler warning.

2000-06-18  Christopher St. John <cstjohn@acm.org>

	* Added default values for x/zDimension in VrmlNodeElevationGrid ctr

2000-06-15  Christopher St. John <cstjohn@acm.org>

	* Added isOver eventout to defineType in VrmlNodeTouchSensor.cpp
	* Removed debug message from VrmlNodeSwitch.cpp

2000-05-20 Christopher St. John <cstjohn@acm.org>

	* Added view frustum culling code, touched all VrmlNode*.{cpp/h} files
	* Fixed (badly, temporarily) navigation code in VrmlScene/ViewOpenGL

2000-04-19  Chris Morley  <cmorley@vermontel.net>

	* Added -title arg to lookat for multiple viewers under xswallow.

2000-04-11  Braden McDaniel  <braden@endoframe.com>
        
        * Added some infectious const lovin' with a dash of size_t. Too much
          to list. 
        
        * In VrmlMFString, removed the method:
        
            char ** getURL()
          
          This was redundant with the availability of
          
            virtual const VrmlMFString & getUrl() const;
            
2000-04-09  Michael Louka <Michael.Louka@hrp.no>

        * Modified System::time() for the Mac OS to provide VRML97 compliancy

2000-04-07  Braden McDaniel  <braden@endoframe.com>
        
        * The VrmlSFImage constructor was assuming ownership of the pixel array
          passed to it. This is inconsistent with the behavior of the similar