@@ -1,4 +1,4 @@
 ACLOCAL_AMFLAGS = -I ./m4 -I ./libvrml97core/m4 -I ./libvrml97gl/m4
 
-SUBDIRS = m4 models libvrml97js libvrml97core libvrml97gl lookat
+SUBDIRS = m4 models libvrml97core libvrml97gl lookat
 EXTRA_DIST = NODES README.SOUND
