@@ -13,38 +13,27 @@ AC_DEFINE_UNQUOTED(LIBVRML97_MINOR_VERSION)
 AC_DEFINE_UNQUOTED(LIBVRML97_MICRO_VERSION)
 
 dnl
-dnl libtool library versions
-dnl
-  VRML97_LIBRARY_VERSION="1:0:0"
-VRML97GL_LIBRARY_VERSION="0:1:0"
-VRML97JS_LIBRARY_VERSION="0:0:0"
-   ANTLR_LIBRARY_VERSION="0:0:0"
-dnl                       | | |
-dnl                +------+ | +---+
-dnl                |        |     |
-dnl             current:revision:age
-dnl                |        |     |
-dnl                |        |     +- Increment if interfaces have been added
-dnl                |        |        Set to zero if interfaces have been removed
-dnl                |        |        or changed
-dnl                |        +- Increment if source code has changed
-dnl                |           Set to zero if current is incremented
-dnl                +- Increment if interfaces have been added, removed or
-dnl                   changed
-AC_SUBST(VRML97_LIBRARY_VERSION)
-AC_SUBST(VRML97GL_LIBRARY_VERSION)
-AC_SUBST(VRML97JS_LIBRARY_VERSION)
-
-dnl
 dnl Variables to build libantlr as a convenience library
 dnl
-AC_SUBST(ANTLR_LIBRARY_VERSION)
 NOINSTALL_LIBANTLR=libantlr.la
 AC_SUBST(INSTALL_LIBANTLR)
 AC_SUBST(NOINSTALL_LIBANTLR)
 AC_SUBST(LIBANTLR_RPATH_FLAG)
 ANTLR_INCLUDEDIR=/vrml97/antlr
 AC_SUBST(ANTLR_INCLUDEDIR)
+
+dnl
+dnl Variables to build libjs as a convenience library
+dnl
+NOINST_LIBJS="libjs.la"
+AC_SUBST(LIBJS)
+AC_SUBST(NOINST_LIBJS)
+AC_SUBST(JS_RPATH_LDFLAG)
+JS_INCLUDE_DIR="\$(includedir)"
+AC_SUBST(JS_INCLUDE_DIR)
+JS_INCLUDE_FILES="jsapi.h jsautocfg.h jscompat.h jslong.h jsotypes.h jsosdep.h jspubtd.h jstypes.h"
+AC_SUBST(JS_INCLUDE_FILES)
+AM_CONDITIONAL(JS_PRELINK_FDLIBM, test "apple" = "orange")
 
 
 dnl
@@ -56,8 +45,8 @@ AC_MINGW32
 dnl
 dnl Checks for programs.
 dnl
-AC_PROG_CC
-AC_PROG_CPP
+dnl AC_PROG_CC
+dnl AC_PROG_CPP
 AM_PROG_LIBTOOL
 AC_PROG_INSTALL
 dnl AM_PROG_LEX
@@ -141,11 +130,6 @@ AC_ARG_ENABLE(debug,
 AM_CONDITIONAL(DEBUG, test x$debug = xtrue)
 
 dnl
-dnl Stuff for JavaScript
-dnl
-AC_DEFINE(XP_UNIX, ,[JavaScript requires this])
-
-dnl
 dnl JavaScript doesn't include config.h, so we have to use automake
 dnl conditionals.
 dnl
@@ -172,16 +156,14 @@ AC_OUTPUT(Makefile \
           models/Makefile \
           models/audio/Makefile \
           models/textures/Makefile \
-          libvrml97js/Makefile \
-          libvrml97js/src/Makefile \
-          libvrml97js/src/vrml97js/Makefile \
-          libvrml97js/src/vrml97js/fdlibm/Makefile \
           libvrml97core/Makefile \
           libvrml97core/m4/Makefile \
           libvrml97core/src/Makefile \
           libvrml97core/src/vrml97/Makefile \
           libvrml97core/src/vrml97/Vrml97TokenTypes.txt \
           libvrml97core/src/vrml97/antlr/Makefile \
+          libvrml97core/src/vrml97/javascript/Makefile \
+          libvrml97core/src/vrml97/javascript/fdlibm/Makefile \
           libvrml97gl/Makefile \
           libvrml97gl/m4/Makefile \
           libvrml97gl/src/Makefile \
