@@ -9,10 +9,8 @@ endif
 INCLUDES = -I$(top_srcdir)/libvrml97core/src -I$(top_srcdir)/libvrml97gl/src
 AM_CPPFLAGS = $(DEBUG_CPPFLAGS)
 AM_CXXFLAGS = -Wall @GLUT_CFLAGS@
-LDADD = \
-        ../../libvrml97gl/src/vrml97gl/libvrml97gl.la \
-        ../../libvrml97core/src/vrml97/libvrml97.la \
-        ../../libvrml97js/src/vrml97js/libvrml97js.la
+LDADD = ../../libvrml97gl/src/vrml97gl/libvrml97gl.la \
+../../libvrml97core/src/vrml97/libvrml97.la
 
 LDFLAGS = @GLUT_LIBS@
 
